syntax = "proto3";

option java_package = "az.etibarli.models";
option java_multiple_files = true;

message AddressRequest {
  int64 id = 1;
}

message AddressResponse {
  int64 id = 1;
  string country = 2;
  string city = 3;
  string location = 4;
  int64 person_id = 5;
}

service AddressService {
  rpc getAddress(AddressRequest) returns (AddressResponse);
}